2011-09-30  Daniel Bates  <dbates@webkit.org>

        Attempt to fix the Apple Windows and WinCairo Debug builds after
        <http://trac.webkit.org/changeset/96446> (https://bugs.webkit.org/show_bug.cgi?id=69203).

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def: Remove the symbol
        ?toStrictThisObject@JSObject@JSC@@UBE?AVJSValue@2@PAVExecState@2@@Z since the
        corresponding function, JSValue::toStrictThisObject(), was removed.

2011-09-30  Yuqiang Xian  <yuqiang.xian@intel.com>

        DFG operation results are not set correctly in JSVALUE32_64 DFG JIT
        https://bugs.webkit.org/show_bug.cgi?id=69126

        Reviewed by Gavin Barraclough.

        The setupResults routine has the bug of reversing the source and destination. 
        Also some other trivial (but stupid) bugs need to be fixed in JSVALUE32_64 DFG JIT.

        * dfg/DFGJITCodeGenerator.h:
        (JSC::DFG::setupTwoStubArgs):
        (JSC::DFG::setupResults):
        * dfg/DFGJITCodeGenerator32_64.cpp:
        (JSC::DFG::JITCodeGenerator::fillJSValue):
        (JSC::DFG::JITCodeGenerator::nonSpeculativeValueToInt32):
        (JSC::DFG::JITCodeGenerator::nonSpeculativeNonPeepholeCompare):

2011-09-30  Gavin Barraclough  <barraclough@apple.com>

        Remove toStrictThisObject, toThisString, toThisJSString
        https://bugs.webkit.org/show_bug.cgi?id=69203

        Rubber stamped by Sam Weinig

        These are no longer used.

        * JavaScriptCore.exp:
        * runtime/JSActivation.cpp:
        * runtime/JSActivation.h:
        * runtime/JSObject.cpp:
        * runtime/JSObject.h:
        * runtime/JSStaticScopeObject.cpp:
        * runtime/JSStaticScopeObject.h:
        * runtime/JSValue.h:
        * runtime/StrictEvalActivation.cpp:
        * runtime/StrictEvalActivation.h:

2011-09-30  Filip Pizlo  <fpizlo@apple.com>

        DFG does not speculate aggressively enough on put_by_id
        https://bugs.webkit.org/show_bug.cgi?id=69114
